<?xml version="1.0"?>
<package format="2">
  <name>pwcnet_ros</name>
  <version>0.1.0</version>
  <description>ROS interface for PWC-Net</description>

  <maintainer email="fujimoto@aisl.cs.tut.ac.jp">Hironori Fujimoto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>aislam_msg</depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>image_view</exec_depend>
</package>
